--- a/index.html
+++ b/index.html
@@ -1,3 +1,51 @@
 ---
-layout: home
+layout: default_cleaner
+title: Welcome
 ---
+<h1> I'm Kai Sam Ng. </h1>
+<div style="display: grid; grid-template-columns: 2fr 1fr; grid-column-gap: 5%;">
+    <div>
+        <img src="Math_Class_Description.png"></i>
+    </div>
+    <div>
+    <p>My name is Mr. Ng. I'm a math teacher.  </p><p>If you found this page and you're a student, you probably are looking for the <a href="https://tjhsststats.github.io/RGuides/index.html"> RGuides page</a> instead.</p> 
+    </div>
+</div>
+
+
+
+
+
+
+<h1> About Me </h1>
+
+I'm currently a math teacher at TJHSST. I believe that the best way you can learn math (or anything else, really) is to do it and teach it to someone else.
+
+<h1> Course History</h1>
+
+Courses I've taught include:
+
+<ul>
+<li>Geometry</li>
+<li>Algebra 2</li>
+<li>Pre-Calculus</li>
+<li>Trigonometry</li>
+<li>AP Statistics</li>
+<li>Cryptography</li>
+<li>Data Science</li>
+</ul>
+
+I'm proficient in R and Python and have written projects and courses based off of them.
+
+<h1>Hobbies</h1> 
+
+In my free time, I like to learn new things; they don't have to be computer related.
+
+Every summer, I embark on a project. Some projects from previous years:
+
+<ul>
+<li>Last year, during the lockdown, I set up a home automation system using <a href="https://github.com/home-assistant/core">Home Assistant</a>. My setup is currently a Zigbee network (for lights and sensors), a MQTT server, and a PostgreSQL database running in a couple of Docker containers.</li>
+<li>I've also set up a Dropbox replacement with <a href="https://github.com/nextcloud/server">Nextcloud.</a></li>
+<li>This summer, I'm learning RMarkdown (finally) to publish some of the material I wrote for the experimental RS1 course onto <a href="https://tjhsststats.github.io/RGuides/index.html">this website.</a></li>
+</ul>
+</div>
