--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: Welcome
     <div>
         <img src="assets/Me.jpg"></img>
     </div>
-        <div style="grid-column: auto /span 2;"><p>My name is Kai Sam Ng. I'm a technical instructor based in the Northern Virginia area. Previously, I taught Mathematics 7 years, most recently at at Thomas Jefferson High School for Science and Technology, where I won the Outstanding Teacher of the Year award in 2022. </p>
+        <div style="grid-column: auto /span 2;"><p>My name is Kai Sam Ng. I'm a technical instructor based in the Northern Virginia area. Previously, I was a high school mathematics teacher, most recently at at Thomas Jefferson High School for Science and Technology, where I won the Outstanding Teacher of the Year award in 2022. </p>
     <p>If you found this page as a former student, you're probably looking for the <a href="https://tjhsststats.github.io/RGuides/index.html"> RGuides page</a> instead.</p> </div>
 
 </div>
