--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@ title: Welcome
     <div>
         <img src="assets/Me.jpg"></img>
     </div>
-        <div style="grid-column: auto /span 2;"><p>My name is Kai Sam Ng. I'm a technical instructor based in the Northern Virginia area. Previously, I was a high school mathematics teacher, most recently at at Thomas Jefferson High School for Science and Technology, where I won the Outstanding Teacher of the Year award in 2022. </p>
-    <p>If you found this page as a former student, you're probably looking for the <a href="https://tjhsststats.github.io/RGuides/index.html"> RGuides page</a> instead.</p> </div>
+        <div style="grid-column: auto /span 2;"><p>My name is Kai Sam Ng. I'm a technical instructor based in Northern Virginia. Previously, I was a high school mathematics teacher, most recently at at Thomas Jefferson High School for Science and Technology, where I won the Outstanding Teacher of the Year award in 2022. </p>
+        <p>I graduated from Stuyvesant High School in 2010, and from Cornell University in 2014 with Honors, where I won the Seidman Prize for the best school-wide undergraduate dissertation. </p>
+        <p>The picture to the left/above was taken at Snæfellsnes, Iceland, on July 2017.</p>
+        <p>If you found this page as a former student, you're probably looking for the <a href="https://tjhsststats.github.io/RGuides/index.html"> RGuides page</a> instead.</p> </div>
 
 </div>
 
@@ -50,9 +52,9 @@ In my free time, I like to learn new things; they don't have to be computer rela
 Every summer, I embark on a project. Some projects from previous years:
 <br></br>
 <ul>
-<li>Last year, during the lockdown, I set up a home automation system using <a href="https://github.com/home-assistant/core">Home Assistant</a>. My setup is currently a Zigbee network (for lights and sensors), a MQTT server, and a PostgreSQL database running in a couple of Docker containers.</li>
-<li>I've also set up a Dropbox replacement with <a href="https://github.com/nextcloud/server">Nextcloud.</a></li>
-<li>This summer, I'm learning RMarkdown (finally) to publish some of the material I wrote for the experimental RS1 course onto <a href="https://tjhsststats.github.io/RGuides/index.html">this website.</a></li>
+<li>During the pandemic, I set up a home automation system using <a href="https://github.com/home-assistant/core">Home Assistant</a>. My setup is currently a Zigbee network (for lights and sensors), a MQTT server, and a PostgreSQL database running in a couple of Docker containers.</li>
+<li>I've also set up a Dropbox and Google Photos replacement with <a href="https://github.com/nextcloud/server">Nextcloud. Recently, I implemented a neural net to recognize and group faces in my photo collection, which runs offline from the cloud (though nothing can ever beat Google's high quality data).</a></li>
+<li>I used RMarkdown (finally) to publish some of the material I wrote for an experimental statistics course at TJ on <a href="https://tjhsststats.github.io/RGuides/index.html">this website.</a></li>
 <li>I love fermeted foods. I make my own kimchi and suan cai (both pickled vegetables).</li>
 </ul>
 </div>
