Responsive layout changes

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@ title: Welcome
 <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); grid-column-gap: 5%;">
     <div>
         <img src="assets/Me.jpg"></img>
+        <p style="text-align:center; color:var(--gray-600); font-size: 85%; font-weight: lighter; font-style: italic;">Snæfellsnes, Iceland, July 2017.</p>
     </div>
         <div style="grid-column: auto /span 2;"><p>My name is Kai Sam Ng. I'm a technical instructor based in Northern Virginia. Previously, I was a high school mathematics teacher, most recently at at Thomas Jefferson High School for Science and Technology, where I won the Outstanding Teacher of the Year award in 2022. </p>
         <p>I graduated from Stuyvesant High School in 2010, and from Cornell University in 2014 with Honors, where I won the Seidman Prize for the best school-wide undergraduate dissertation. </p>
-        <p>The picture to the left/above was taken at Snæfellsnes, Iceland, on July 2017.</p>
         <p>If you found this page as a former student, you're probably looking for the <a href="https://tjhsststats.github.io/RGuides/index.html"> RGuides page</a> instead.</p> </div>
 
 </div>
