Fixed link reference (oops)

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ Every summer, I embark on a project. Some projects from previous years:
 <br></br>
 <ul>
 <li>During the pandemic, I set up a home automation system using <a href="https://github.com/home-assistant/core">Home Assistant</a>. My setup is currently a Zigbee network (for lights and sensors), a MQTT server, and a PostgreSQL database running in a couple of Docker containers.</li>
-<li>I've also set up a Dropbox and Google Photos replacement with <a href="https://github.com/nextcloud/server">Nextcloud. Recently, I implemented a neural net to recognize and group faces in my photo collection, which runs offline from the cloud (though nothing can ever beat Google's high quality data).</a></li>
+<li>I've also set up a Dropbox and Google Photos replacement with <a href="https://github.com/nextcloud/server">Nextcloud. </a>Recently, I implemented a neural net to recognize and group faces in my photo collection, which runs offline from the cloud (though nothing can ever beat Google's high quality data).</li>
 <li>I used RMarkdown (finally) to publish some of the material I wrote for an experimental statistics course at TJ on <a href="https://tjhsststats.github.io/RGuides/index.html">this website.</a></li>
 <li>I love fermeted foods. I make my own kimchi and suan cai (both pickled vegetables).</li>
 </ul>
